# copymanga-downloader

./: .gitignore  CODE_OF_CONDUCT.md  Image_stitching.py  README-EN.md  README.md  RelaGetCookies.md  cbz.py  config.py  epub.py  function.py  login.py  main.py  main.spec  pyproject.toml  requirements.txt  settings.json  settings.py  setup.py  url.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report,yml  bug-report.md  bug-report.yml  feature-request.yml
.github/workflows/: python-app-Windows.yml  python-app.yml  python-publish.yml  virustotal.yml
copymanga/: cbz.py  epub.py  function.py  login.py  main.py  settings.py
