[tool.poetry]
name = "copymanga-dl"
version = "3.1"
description = "Copymanga Downloader"
license = "GPL-3.0-or-later"
authors = ["misaka10843 <misaka10843@outlook.jp>"]
readme = "README.md"
homepage = "https://misaka.sakurakoi.top/"
repository = "https://github.com/misaka10843/copymanga-downloader"
documentation = ""
keywords = ["copymanga", "downloader"]
classifiers = [
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
]
packages = [
  {include = "main.py"},
  {include = "Image_stitching.py"},
]

[tool.poetry.dependencies]
python = ">=3.10,<4"
requests = ">=2.28.2"
retrying = ">=1.3.4"
rich = ">=13.3.2"

[tool.poetry.scripts]
copymanga-dl = 'main:main'
image-merge = 'Image_stitching:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
