[project]
name = "copymanga-downloader"

version = "3.5.3.1"

description = "使用python+copymanga API来下载copymanga(拷贝漫画)中的漫画，支持批量+选话下载和获取您收藏的漫画并下载！"
license = {file = "LICENSE"}
authors = [{name = "misaka10843", email = "misaka10843@outlook.jp"}]
readme = "README.md"
repository = "https://github.com/misaka10843/copymanga-downloader"
keywords = ["copymanga", "downloader"]
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]

requires-python = ">= 3.10"
packages = [
    { include = "*.py" },
]
dependencies = [
    "rich",
    "requests"
]
[project.urls]
Repository = "https://github.com/misaka10843/copymanga-downloader"
Issues = "https://github.com/misaka10843/copymanga-downloader/issues"

[project.scripts]
copymanga-dl = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "cbz.py",
    "epub.py",
    "function.py",
    "login.py",
    "main.py",
    "settings.py",
    "config.py"
]
